--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
-Revision history for Perl extension Emacs::Run::ExtractDocs.
+Revision history for Emacs-Run-ExtractDocs
 
 0.01  Fri Mar  7 02:47:29 2008
 	- original version; created by h2xs 1.23 with options
 		-AX -nEmacs::Run::ExtractDocs -b5.8.0
+
+0.02  Fri Jan 22 04:33:54 2010
+        - switching to a Module::Build based project
+          (working with module-starter)
 
