--- a/README
+++ b/README
@@ -1,30 +1,23 @@
-Emacs-Run-ExtractDocs version 0.01
-==================================
+Emacs-Run-ExtractDocs
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+A perl/elisp lash-up to extract the docstrings from an
+elisp file to a html page.
 
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+With version 0.2, this is now a Module::Build-based project
 
 INSTALLATION
 
-To install this module type the following:
+To install this module, run the following commands:
 
-   perl Makefile.PL
-   make
-   make test
-   make install
+	perl Build.PL
+	./Build
+	./Build test
+	./Build install
+        sudo cp lisp/extract-doctrings.el /usr/share/emacs/site-lisp
+        (or some other location in your emacs load-path)
 
-You will also need to manually place a copy of this file
-in a location listed in your emacs load-path:
-
-  lisp/extract-doctrings.el
+Note that last manual installation step (this is unfortunately
+standard for CPAN packages containing emacs lisp code).
 
 DEPENDENCIES
 
@@ -39,14 +32,35 @@ The tests require:
    Test::Differences
    Test::More
 
+SUPPORT AND DOCUMENTATION
+
+After installing, you can find documentation for this module with the
+perldoc command.
+
+    perldoc Emacs::Run::ExtractDocs
+
+You can also look for information at:
+
+    RT, CPAN's request tracker
+        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Emacs-Run-ExtractDocs
+
+    AnnoCPAN, Annotated CPAN documentation
+        http://annocpan.org/dist/Emacs-Run-ExtractDocs
+
+    CPAN Ratings
+        http://cpanratings.perl.org/d/Emacs-Run-ExtractDocs
+
+    Search CPAN
+        http://search.cpan.org/dist/Emacs-Run-ExtractDocs/
+
+
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
+Copyright (C) 2008, 2010 Joseph Brenner
 
-Copyright (C) 2008 by Joseph Brenner
+This program is free software; you can redistribute it and/or modify it
+under the terms of either: the GNU General Public License as published
+by the Free Software Foundation; or the Artistic License.
 
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself, either Perl version 5.8.7 or,
-at your option, any later version of Perl 5 you may have available.
-
+See http://dev.perl.org/licenses/ for more information.
 
