Import of DOOM/Emacs-Run-ExtractDocs-0.03 from CPAN.
gitpan-cpan-distribution: Emacs-Run-ExtractDocs
gitpan-cpan-version:      0.03
gitpan-cpan-path:         DOOM/Emacs-Run-ExtractDocs-0.03.tar.gz
gitpan-cpan-author:       DOOM
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -8,3 +8,5 @@ Revision history for Emacs-Run-ExtractDocs
         - switching to a Module::Build based project
           (working with module-starter)
 
+0.03  Mon Jan 25 02:59:36 2010
+        - fixed missing dependencies in Build.PL
